--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,6 +147,14 @@
     <string name="solid_compression">Solid Compression</string>
     <string name="thread_count">Thread Count</string>
     <string name="max_available_thread">0 for maximum available threads</string>
+    <string name="automatic_threads">Maximum Threads</string>
+    <string name="automatic_threads_subtitle">Uses maximum CPU for fastest speeds</string>
+    <string name="automatic_threads_warning">Warning: Uses all CPU cores. Device may become unresponsive.</string>
+    <string name="solid_compression_subtitle">Improves ratio for many small files</string>
+    <string name="destination">Basics</string>
+    <string name="compression_settings">Compression Settings</string>
+    <string name="security">Security</string>
+    <string name="specify_custom_thread_count">Specify custom thread count</string>
 
     <!-- Success toast messages -->
     <string name="compression_success">Compression successful</string>
