update strings fix

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -143,4 +143,32 @@
     <string name="invalid_archive_type">Невалиден тип архив</string>
     <string name="updating_archive">Обновяване на архива…</string>
     <string name="update_archive_service">Обновен архив</string>
+    <string name="select">Изберете</string>
+    <string name="compression_settings">Настройки за компресиране</string>
+    <string name="select_directory">Избиране на директория…</string>
+    <string name="output_path">Изходен път</string>
+    <string name="no_match">Няма съвпадение</string>
+    <string name="refresh">Опресняване</string>
+    <string name="refreshed">Обновено</string>
+    <string name="storage_info_format">Налично: %1$s / Общо: %2$s</string>
+    <string name="low_storage_warning">Внимание: Малко място за съхранение! Налично: %1$s</string>
+    <string name="low_storage_warning_dynamic">Малко място за съхранение! Налично е %1$s. Освободете поне ~%2$s. Може да е необходимо допълнително място в зависимост от формата на архива.</string>
+    <string name="please_wait">Моля, изчакайте…</string>
+    <string name="compare">Сравни</string>
+    <string name="automatic_threads">Максимален брой нишки</string>
+    <string name="automatic_threads_subtitle">Използва максимално CPU за най-високи скорости</string>
+    <string name="automatic_threads_warning">Предупреждение: Използва всички ядра на CPU. Устройството може да спре да реагира по време на архивиране.</string>
+    <string name="solid_compression_subtitle">Подобрява съотношението за много малки файлове, но времето за извличане ще се увеличи</string>
+    <string name="destination">Общи</string>
+    <string name="security">Сигурност</string>
+    <string name="specify_custom_thread_count">Задайте персонализиран брой нишки</string>
+    <string name="min_split_size_error">Минималният размер на разделянето е 64KB</string>
+    <string name="file_does_not_exist">Файлът не съществува</string>
+    <string name="success">Успех</string>
+    <string name="error">Грешка</string>
+    <string name="archive_created">Архивът е създаден</string>
+    <string name="extraction_completed">Извличането е завършено</string>
+    <string name="archive_updated">Архивът е актуализиран</string>
+    <string name="compression_completed">Компресията е завършена</string>
+    <string name="zstd_compression_level_format">Ниво на компресия на ZSTD: %d</string>
 </resources>
