--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -147,4 +147,32 @@
     <string name="invalid_archive_type">Недійсний тип архіву</string>
     <string name="updating_archive">Оновлення архіву…</string>
     <string name="update_archive_service">Архів оновлень</string>
+    <string name="select_directory">Виберіть каталог…</string>
+    <string name="output_path">Вихідний шлях</string>
+    <string name="no_match">Немає матчу</string>
+    <string name="refresh">Оновити</string>
+    <string name="refreshed">Оновлено</string>
+    <string name="storage_info_format">Доступно: %1$s / Всього: %2$s</string>
+    <string name="low_storage_warning">Увага: Мало місця для зберігання! Доступно: %1$s</string>
+    <string name="low_storage_warning_dynamic">Мало місця! Доступно %1$s. Звільніть щонайменше ~%2$s. Можливо, знадобиться додаткове місце залежно від формату архіву.</string>
+    <string name="please_wait">Будь ласка, зачекайте…</string>
+    <string name="compare">Порівняти</string>
+    <string name="file_does_not_exist">Файл не існує</string>
+    <string name="select">Вибрати</string>
+    <string name="automatic_threads">Максимальна кількість потоків</string>
+    <string name="automatic_threads_subtitle">Використовує максимум процесора для найвищої швидкості</string>
+    <string name="automatic_threads_warning">Попередження: Використовуються всі ядра процесора. Пристрій може перестати відповідати під час архівування.</string>
+    <string name="solid_compression_subtitle">Покращує співвідношення для багатьох невеликих файлів, але час видобування збільшиться</string>
+    <string name="destination">Загальне</string>
+    <string name="security">Безпека</string>
+    <string name="specify_custom_thread_count">Вкажіть власну кількість ниток</string>
+    <string name="min_split_size_error">Мінімальний розмір розділення становить 64 КБ</string>
+    <string name="success">Успіх</string>
+    <string name="error">Помилка</string>
+    <string name="archive_created">Архів створено</string>
+    <string name="extraction_completed">Видобування завершено</string>
+    <string name="archive_updated">Архів оновлено</string>
+    <string name="compression_completed">Стиснення завершено</string>
+    <string name="zstd_compression_level_format">Рівень стиснення ZSTD: %d</string>
+    <string name="compression_settings">Налаштування стиснення</string>
 </resources>
