--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -143,4 +143,32 @@
     <string name="invalid_archive_type">Ungültiger Archivtyp</string>
     <string name="updating_archive">Aktualisieren des Archivs…</string>
     <string name="update_archive_service">Archiv aktualisieren</string>
+    <string name="select_directory">Verzeichnis wählen…</string>
+    <string name="output_path">Ausgabepfad</string>
+    <string name="no_match">Keine Übereinstimmung</string>
+    <string name="refresh">Aktualisieren</string>
+    <string name="refreshed">Aktualisiert</string>
+    <string name="storage_info_format">Verfügbar: %1$s / Gesamt: %2$s</string>
+    <string name="low_storage_warning">Warnung: Niedriger Speicherplatz! Verfügbar: %1$s</string>
+    <string name="low_storage_warning_dynamic">Niedriger Speicherplatz! %1$s verfügbar, gib mindestens ~%2$s frei. Möglicherweise wird mehr Speicher benötigt, je nach Archivformat.</string>
+    <string name="please_wait">Bitte warten…</string>
+    <string name="compare">Vergleichen</string>
+    <string name="file_does_not_exist">Datei existiert nicht</string>
+    <string name="select">Auswählen</string>
+    <string name="automatic_threads">Maximale Threads</string>
+    <string name="automatic_threads_subtitle">Benutzt maximale CPU für höchste Geschwindigkeiten</string>
+    <string name="automatic_threads_warning">Warnung: Benutzt alle CPU-Kerne. Das Gerät kann während der Komprimierung einfrieren.</string>
+    <string name="solid_compression_subtitle">Verbessert das Verhältnis für viele kleine Dateien, erhöht allerdings die Extraktionszeit</string>
+    <string name="security">Sicherheit</string>
+    <string name="specify_custom_thread_count">Geben Sie benutzerdefinierte Thread count an</string>
+    <string name="min_split_size_error">Minimale Teilgröße ist 64KB</string>
+    <string name="success">Erfolg</string>
+    <string name="error">Fehler</string>
+    <string name="archive_created">Archiv erstellt</string>
+    <string name="extraction_completed">Entpacken abgeschlossen</string>
+    <string name="archive_updated">Archiv aktualisiert</string>
+    <string name="compression_completed">Komprimierung abgeschlossen</string>
+    <string name="zstd_compression_level_format">ZSTD Kompressionslevel: %d</string>
+    <string name="destination">Allgemein</string>
+    <string name="compression_settings">Komprimierungseinstellungen</string>
 </resources>
