--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -41,7 +41,7 @@
     <string name="compression_ongoing">Сжатие…</string>
     <string name="delete_files_notification_name">Удалить файл</string>
     <string name="root_access">Root-доступ</string>
-    <string name="root_access_summary">Включить доступ к root каталогу</string>
+    <string name="root_access_summary">Включить доступ к корневой папке</string>
     <string name="internal_storage">Внутреннее хранилище</string>
     <string name="root">Root</string>
     <string name="directory_empty">Папка пуста</string>
@@ -147,4 +147,32 @@
     <string name="invalid_archive_type">Неправильный тип архива</string>
     <string name="updating_archive">Обновление архива…</string>
     <string name="update_archive_service">Архив обновлений</string>
+    <string name="select_directory">Выберите папку…</string>
+    <string name="output_path">Выводной путь</string>
+    <string name="no_match">Нет совпадения</string>
+    <string name="refresh">Обновить</string>
+    <string name="refreshed">Обновлено</string>
+    <string name="storage_info_format">Доступно: %1$s / Всего: %2$s</string>
+    <string name="low_storage_warning">Предупреждение: мало места на хранилище! Доступно: %1$s</string>
+    <string name="low_storage_warning_dynamic">Мало места! Доступно %1$s. Освободите хотя бы %2$s. Возможно, потребуется и больше места в зависимости от формата архива.</string>
+    <string name="please_wait">Подождите…</string>
+    <string name="compare">Сравнить</string>
+    <string name="file_does_not_exist">Файл не существует</string>
+    <string name="select">Выбрать</string>
+    <string name="automatic_threads">Максимум потоков</string>
+    <string name="automatic_threads_subtitle">Максимально использовать процессор для ускорения</string>
+    <string name="automatic_threads_warning">Предупреждение: Использует все ядра процессора. Устройство может не отзываться во время архивации.</string>
+    <string name="solid_compression_subtitle">Улучшает соотношение для многих небольших файлов, но время распаковки увеличится</string>
+    <string name="destination">Общее</string>
+    <string name="security">Безопасность</string>
+    <string name="specify_custom_thread_count">Указать число потоков</string>
+    <string name="min_split_size_error">Минимальный размер разделения 64Кб</string>
+    <string name="success">Успешно</string>
+    <string name="error">Ошибка</string>
+    <string name="archive_created">Архив создан</string>
+    <string name="extraction_completed">Распаковка завершена</string>
+    <string name="archive_updated">Архив обновлён</string>
+    <string name="compression_completed">Сжатие завершено</string>
+    <string name="zstd_compression_level_format">Уровень сжатия ZSTD: %d</string>
+    <string name="compression_settings">Настройки сжатия</string>
 </resources>
